force-app/main/default/objects/Object__mdt/Object__mdt.object-meta.xml
<CustomObject>
    <description>Relevant salesforce standard and custom objects referenced in MTD</description>
    <label>Object</label>
    <pluralLabel>Objects</pluralLabel>
</CustomObject>