force-app/main/default/objects/Object__mdt/fields/CurrencyManagement__c.field-meta.xml
<CustomField>
    <fullName>CurrencyManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currency management</label>
    <type>Checkbox</type>
</CustomField>