force-app/main/default/objects/Object__mdt/fields/CustomObject__c.field-meta.xml
<CustomField>
    <fullName>CustomObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomObject</label>
    <type>Checkbox</type>
</CustomField>